--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -14,10 +14,11 @@
 <li><a href= "gaben.html">Gabe Noodle and the Loosest Crew</a></li>
 <li> <a href= "thesales.html">The Sales; A holiday of Gaben</a></li>
 <li> <a href="prophets.html"> Prophets and Branches of Tightism </a> </li> 
-<li> <a href="grumio.html">Grumio</a></li></ol>
+<li> <a href="grumio.html">Grumio</a></li>
+<li> <a href="swifto.html"> Doctor Swifto </a></li></ol>
 <h2><u> <strong> Other Prophets </strong></u></h2> <ol> 
 <li> <a href="grumio.html">Grumio</a></li>
-<li> <a href="swifto.html"> Doctor Swifto (not done)</a></li>
+<li> <a href="swifto.html"> Doctor Swifto </a></li>
 <li> <a href="ryan.html"> Ryan Gosling (not done)</a></li>
 <li> <a href="yeolde.html"> Ye Olde Buttcheeks (not done)</a></li>
 <li> <a href="dallas.html"> Dallas the Dollar Grabber(not done)</a></li>
