--- a/godd.html
+++ b/godd.html
@@ -16,14 +16,15 @@
   <li><a href="gaben.html">Gabe Noodle and the Loosest Crew</a></li>
 <li> <a href="thesales.html">The Sales; A holiday of Gaben</a></li>
 <li> <a href="prophets.html"> Prophets and Branches of Tightism </a> </li> 
-<li> <a href="grumio.html">Grumio</a></li></ol></div>
+<li> <a href="grumio.html">Grumio</a></li>
+<li><a href="swifto.html"> Doctor Swifto </a></li></ol></div>
 <div class="godd"> Godd Howard was a poor sheperd in Bethesda, Maryland USA. He was inpregnated with Almir's child, "Yung Lean". Almir told Godd Howard that he is 
 pregnant with a holy child, and that he would be the tightest human to ever live. Almir told Godd Howard that he is to raise this child and that 
 Almir ain't payin' no child support. Despite never paying child support to his baby daddy/momma, Almir watched over the child and father.</p>
 <p> After a 2014 announcement, and a 2015 release. (Almir said that Yung will come out in 2014, but he came out in 2015.)
  Godd Howard went to Washington DC. All the hotels were full, as the special olypics was there, Godd Howard had to stay in a barn with chickens and 
  stuff. He had the baby in the hay. Not going to go into how, use your damn imagination. And the holy child was born. 
- Almir had sent messages to 3 Wise Men, Doctor Swifto, BustANutOnTheCoach , and Ryan Gosling. They all brought gifts of DLC. Oh, also money. 
+ Almir had sent messages to 3 Wise Men, Doctor Swifto, BustANutOnTheCoach , and Grumio. They all brought gifts of DLC. Oh, also money. 
  They christened him a real human bean, and a real hero. From birth Yung Lean was a real human bean </p>
  <p> From then on Godd Howard raised Yung Lean into a tight adult. </p>
  <p> Godd Howard became a ceo of an amazing company, making great products. He became a multi-millionare.
