--- a/prophets.html
+++ b/prophets.html
@@ -16,7 +16,8 @@
 <li><a href="gaben.html">Gabe Noodle and the Loosest Crew</a></li>
 <li> <a href="thesales.html">The Sales; A holiday of Gaben</a></li>
 <li> <a href="prophets.html"> Prophets and Branches of Tightism </a> </li> 
-<li> <a href="grumio.html">Grumio</a></li></ol></div>
+<li> <a href="grumio.html">Grumio</a></li>
+<li> <a href="swifto.html"> Doctor Swifto </a></li></ol></div>
 <div class="earlylife">
 <h2> <strong> <u>Branches</u></strong></h2> <p>
 <p> There are many different branches of Alimirism. So many in fact that the main branch, "Tightism", has become an almost polytheistic religion. Many different branches have formed worshiping each of the Prophets. Almost like the Divines from The Elder Scrolls. Each branch worships a different god. But they all believe in Almir as their creator. All worship Almir and Yung Lean.
@@ -24,7 +25,7 @@
 <h2> <u> Worshiped Prophets </u> </h2>
 <ul> <li><a href="grumio.html"> Grumio </a></li>
 <li> <a href="godd.html"> Godd Howard </a> </li>
-<li> <a href="swifto.html"> Doctor Swifto (not done)</a></li>
+<li> <a href="swifto.html"> Doctor Swifto </a></li>
 <li> <a href="ryan.html"> Ryan Gosling (not done)</a></li>
 <li> <a href="yeolde.html"> Ye Olde Buttcheeks (not done)</a></li>
 <li> <a href="dallas.html"> Dallas the Dollar Grabber(not done)</a></li>
