--- a/yung lean.html
+++ b/yung lean.html
@@ -17,7 +17,8 @@
   <li><a href="gaben.html">Gabe Noodle and the Loosest Crew</a></li>
 <li> <a href="thesales.html">The Sales; A holiday of Gaben</a></li>
 <li> <a href="prophets.html"> Prophets and Branches of Tightism </a> </li> 
-<li> <a href="grumio.html">Grumio</a></li></ol></div>
+<li> <a href="grumio.html">Grumio</a></li>
+<li> <a href="swifto.html"> Doctor Swifto </a></li></ol></div>
 
 
 <div class="earlylife"><h2> <u> Early life </u> </h2>
