--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -15,8 +15,9 @@
 <li> <a href= "thesales.html">The Sales; A holiday of Gaben</a></li>
 <li> <a href="prophets.html"> Prophets and Branches of Tightism </a> </li> 
 <li> <a href="grumio.html">Grumio</a></li>
+<li> <a href="rav.html"> Ravenous Bear Cub </a> </li>
 <li> <a href="swifto.html"> Doctor Swifto </a></li></ol>
-<h2><u> <strong> Other Prophets </strong></u></h2> <ol> 
+<h2><u> <strong> Other Prophets </strong></u></h2> <ul> 
 <li> <a href="grumio.html">Grumio</a></li>
 <li> <a href="swifto.html"> Doctor Swifto </a></li>
 <li> <a href="ryan.html"> Ryan Gosling (not done)</a></li>
@@ -25,7 +26,8 @@
 <li> <a href="barack.html"> Barack Obama (not done)</a></li>
 <li> <a href="damon.html"> Matt Damon (not done)</a> </li>
 <li> <a href="Bust.html"> BustANutOnTheCoach (not done)</a> </li>
-</ol>
+<li> <a href="rav.html"> Ravenous Bear Cub </a> </li>
+</ul>
 
 
 <p> 
