--- a/crime.html
+++ b/crime.html
@@ -27,7 +27,7 @@ god during these weeks. It is one of the most important holidays in the Church o
  name of Almir. Crimefest is a time to spread his word of his glory. Prominent members of the Almirism community go door to door 
  spreading the gospel of Almir.
 They show the pitiful heathens and pagans that Almir is the true god. They show that Yung Lean is the true messiah.</p>
-Crimefest is much like <a href= "thesales.html">The Sales</a> that happen every season. During the sales Gaben speads his sales. During crimefest, Almir spreads his DLC.</h3></p></div></body>
+Crimefest is much like <a href= "thesales.html">The Sales</a> that happen every season. During the sales Gaben speads his sales. During crimefest, Almir spreads his DLC.</h3></p><p> During Crimefest, Tightenites sacrafice shekels to the mighty god Almir to appease Yung Lean's black hole. This ceremony is called "The Buying of the DLC". During Crimfest 2015, DLC was brought down to 75% off, so all the jews would spend their shekels on DLC. This way more DLC is sold. DLC is like war-bonds to fight the war on Yung Lean's hole. </p>
+</div></body>
 
-  </body>
 </html>
