--- a/Almir.html
+++ b/Almir.html
@@ -31,7 +31,7 @@
 </div>
 <div class="almirCrime"><p> During <a href="crime.html"> Crimefest</a>,
  Almir releases 100000 DLC per day, prolonging the patching of Yung Lean's hole for a couple of months. The rest of 
- the patching comes from shorter spurts during the year. With each DLC release, Almir becomes tighter and the hole of Yung Lean tightens up a little bit. It only tightens Yung Lean's hole for a short while.
+ the patching comes from shorter spurts during the year. With each DLC release, Almir becomes tighter and the hole of Yung Lean tightens up a little bit. It only tightens Yung Lean's hole for a short while.</p>
 </div>
 
 </body>
