--- a/rav.html
+++ b/rav.html
@@ -18,6 +18,7 @@
 <li> <a href="prophets.html"> Prophets and Branches of Tightism </a> </li> 
 <li> <a href="grumio.html">Grumio</a></li>
 <li> <a href="swifto.html"> Doctor Swifto </a></li>
+<li> <a href="rav.html"> Ravenous Bear Cub </a> </li>
 </ol></div>
 <div class="earlylife">
 <h2> <strong> <u>Ravenous Bear Cub</u></strong></h2> 
