--- a/yung lean.html
+++ b/yung lean.html
@@ -18,7 +18,9 @@
 <li> <a href="thesales.html">The Sales; A holiday of Gaben</a></li>
 <li> <a href="prophets.html"> Prophets and Branches of Tightism </a> </li> 
 <li> <a href="grumio.html">Grumio</a></li>
-<li> <a href="swifto.html"> Doctor Swifto </a></li></ol></div>
+<li> <a href="swifto.html"> Doctor Swifto </a></li>
+<li> <a href="rav.html"> Ravenous Bear Cub </a> </li>
+</ol></div>
 
 
 <div class="earlylife"><h2> <u> Early life </u> </h2>
