--- a/A prayer.html
+++ b/A prayer.html
@@ -16,7 +16,9 @@
 <li><a href="gaben.html">Gabe Noodle and the Loosest Crew</a></li>
 <li> <a href="thesales.html">The Sales; A holiday of Gaben</a></li>
 <li> <a href="prophets.html"> Prophets and Branches of Tightism </a> </li>
-<li> <a href="grumio.html">Grumio</a></li><li> <a href="swifto.html"> Doctor Swifto </a></li>
+<li> <a href="grumio.html">Grumio</a></li>
+<li> <a href="swifto.html"> Doctor Swifto </a></li>
+<li> <a href="rav.html"> Ravenous Bear Cub </a> </li>
 </ol></div>
 
 <div class= "prayer">
