--- a/Almir.html
+++ b/Almir.html
@@ -17,6 +17,7 @@
 <li> <a href="prophets.html"> Prophets and Branches of Tightism </a> </li> 
 <li> <a href="grumio.html">Grumio</a></li>
 <li> <a href="swifto.html"> Doctor Swifto </a></li>
+<li> <a href="rav.html"> Ravenous Bear Cub </a> </li>
 </ol></div>
 <div class ="almir2"><h2> <u> In the beginning</u> </h2></div>
 <div class ="almir3"><p> In the beginning there was nothing, but Almir Listo. All was dark, no light to be seen. On the first day, Almir created light, dark and DLC. The good was light, dark was bad, and DLC was everywhere.</p>
