--- a/gaben.html
+++ b/gaben.html
@@ -16,7 +16,9 @@
 <li> <a href="thesales.html">The Sales; A holiday of Gaben</a></li>
 <li> <a href="prophets.html"> Prophets and Branches of Tightism </a> </li> 
 <li> <a href="grumio.html">Grumio</a></li>
-<li> <a href="swifto.html"> Doctor Swifto </a></li></ol></div>
+<li> <a href="swifto.html"> Doctor Swifto </a></li>
+<li> <a href="rav.html"> Ravenous Bear Cub </a> </li>
+</ol></div>
 <div class="gaben2"><h3><p> Gabe Noodle is the founder of valve, he is the least tightest person on the planet. 
 A polar opposite to Almir. He is the reason that each season Sales occur. The Sales would be a good thing if he
  did not abuse the money, but he uses the money he earns to gain power. Instead of using it to patch the Black 
