--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -16,7 +16,8 @@
 <li> <a href="prophets.html"> Prophets and Branches of Tightism </a> </li> 
 <li> <a href="grumio.html">Grumio</a></li>
 <li> <a href="rav.html"> Ravenous Bear Cub </a> </li>
-<li> <a href="swifto.html"> Doctor Swifto </a></li></ol>
+<li> <a href="swifto.html"> Doctor Swifto </a></li>
+<li> <a href="bust.html"> BustANutOnTheCoach </a> </li></ol>
 <h2><u> <strong> Other Prophets </strong></u></h2> <ul> 
 <li> <a href="grumio.html">Grumio</a></li>
 <li> <a href="swifto.html"> Doctor Swifto </a></li>
@@ -25,7 +26,7 @@
 <li> <a href="dallas.html"> Dallas the Dollar Grabber(not done)</a></li>
 <li> <a href="barack.html"> Barack Obama (not done)</a></li>
 <li> <a href="damon.html"> Matt Damon (not done)</a> </li>
-<li> <a href="Bust.html"> BustANutOnTheCoach (not done)</a> </li>
+<li> <a href="bust.html"> BustANutOnTheCoach (not done)</a> </li>
 <li> <a href="rav.html"> Ravenous Bear Cub </a> </li>
 </ul>
 
@@ -78,7 +79,9 @@ they are together. If they are all wearing matching avaitor shades, they recieve
 <li> Yung Lean </li>
 <li>Doctor Swifto </li>
 <li>BustANutOnTheCoach </li>
-<li>Ravenous Bear Cub </li> </ul></div>
+<li>Ravenous Bear Cub </li> 
+<li>Ye Olde Buttcheeks </li> 
+<li>Stinging Gonnorea (sort of)</li> </ul></div>
 <img src= "photos/tight.jpg"/>
 <div class="border4main"><p> Tightmasters are amazing drivers, serving as escape drivers and real human beans. After hours on end of radiation exposure from radiating 
 tightness, and sometimes carrying nuclear bombs around casually with their inhuman strength, tightmasters almost have superpowers. Such as mentioned 
