--- a/prophets.html
+++ b/prophets.html
@@ -18,7 +18,9 @@
 <li> <a href="prophets.html"> Prophets and Branches of Tightism </a> </li> 
 <li> <a href="grumio.html">Grumio</a></li>
 <li> <a href="swifto.html"> Doctor Swifto </a></li>
-<li> <a href="rav.html"> Ravenous Bear Cub </a> </li></ol></div>
+<li> <a href="rav.html"> Ravenous Bear Cub </a> </li>
+<li> <a href="bust.html"> BustANutOnTheCoach </a> </li>
+</ol></div>
 <div class="earlylife">
 <h2> <strong> <u>Branches</u></strong></h2> <p>
 <p> There are many different branches of Alimirism. So many in fact that the main branch, "Tightism", has become an almost polytheistic religion. Many different branches have formed worshiping each of the Prophets. Almost like the Divines from The Elder Scrolls. Each branch worships a different god. But they all believe in Almir as their creator. All worship Almir and Yung Lean.
