--- a/swifto.html
+++ b/swifto.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link href = "css/style.css" type = "text/css" rel = "stylesheet" />
-<div class= "borderprayer"><h1><u>Doctor Swifto</u> <title>Doctor Swifto</title> </h1> </head></div>
+<div class= "borderbust"><h1><u>Doctor Swifto</u> <title>Doctor Swifto</title> </h1> </head></div>
 
 <body> 
 <div class= "linksprayer">
@@ -19,6 +19,7 @@
 <li> <a href="grumio.html">Grumio</a></li>
 <li> <a href="swifto.html"> Doctor Swifto </a></li>
 <li> <a href="rav.html"> Ravenous Bear Cub </a> </li>
+<li> <a href="bust.html"> BustANutOnTheCoach </a> </li>
 </ol></div>
 <div class="earlylife">
 <h2> <strong> <u>Doctor Swifto</u></strong></h2> <p>
