--- a/yung lean.html
+++ b/yung lean.html
@@ -20,6 +20,7 @@
 <li> <a href="grumio.html">Grumio</a></li>
 <li> <a href="swifto.html"> Doctor Swifto </a></li>
 <li> <a href="rav.html"> Ravenous Bear Cub </a> </li>
+<li> <a href="bust.html"> BustANutOnTheCoach </a> </li>
 </ol></div>
 
 
