--- a/crime.html
+++ b/crime.html
@@ -20,6 +20,7 @@
 <li> <a href="grumio.html">Grumio</a></li>
 <li> <a href="swifto.html"> Doctor Swifto </a></li>
 <li> <a href="rav.html"> Ravenous Bear Cub </a> </li>
+<li> <a href="bust.html"> BustANutOnTheCoach </a> </li>
 </ol></div>
 <div class="info2"><p><h3> Crimefest is a holiday celebrating the worship of Almir, and the life of Yung Lean. 
 It is a holiday that lasts several weeks in October. During crimefest, 
