--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -21,13 +21,14 @@
 <h2><u> <strong> Other Prophets </strong></u></h2> <ul> 
 <li> <a href="grumio.html">Grumio</a></li>
 <li> <a href="swifto.html"> Doctor Swifto </a></li>
-<li> <a href="ryan.html"> Ryan Gosling (not done)</a></li>
+<li> <a href="bust.html"> BustANutOnTheCoach</a> </li>
+<li> <a href="rav.html"> Ravenous Bear Cub </a> </li>
 <li> <a href="yeolde.html"> Ye Olde Buttcheeks (not done)</a></li>
+<li> <a href="ryan.html"> Ryan Gosling (not done)</a></li>
 <li> <a href="dallas.html"> Dallas the Dollar Grabber(not done)</a></li>
 <li> <a href="barack.html"> Barack Obama (not done)</a></li>
 <li> <a href="damon.html"> Matt Damon (not done)</a> </li>
-<li> <a href="bust.html"> BustANutOnTheCoach (not done)</a> </li>
-<li> <a href="rav.html"> Ravenous Bear Cub </a> </li>
+
 </ul>
 
 
