--- a/prophets.html
+++ b/prophets.html
@@ -27,14 +27,16 @@
 </p>
 <h2> <u> Worshiped Prophets </u> </h2>
 <ul> <li><a href="grumio.html"> Grumio </a></li>
-<li> <a href="godd.html"> Godd Howard </a> </li>
+
 <li> <a href="swifto.html"> Doctor Swifto </a></li>
-<li> <a href="ryan.html"> Ryan Gosling (not done)</a></li>
+<li> <a href="rav.html"> Ravenous Bear Cub </a> </li>
+<li> <a href="Bust.html"> BustANutOnTheCoach </a> </li>
 <li> <a href="yeolde.html"> Ye Olde Buttcheeks (not done)</a></li>
 <li> <a href="dallas.html"> Dallas the Dollar Grabber(not done)</a></li>
 <li> <a href="barack.html"> Barack Obama (not done)</a></li>
 <li> <a href="damon.html"> Matt Damon (not done)</a> </li>
-<li> <a href="Bust.html"> BustANutOnTheCoach (not done)</a> </li>
+<li> <a href="godd.html"> Godd Howard </a> </li>
+<li> <a href="ryan.html"> Ryan Gosling (not done)</a></li>
 </ul>
 </div>
 </body>
