--- a/prophets.html
+++ b/prophets.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link href = "css/style.css" type = "text/css" rel = "stylesheet" />
-<div class= "borderprayer"><h1><u> Branches and Prophets</u> <title>Branches and Prophets</title> </h1> </head></div>
+<div class= "borderbust"><h1><u> Branches and Prophets</u> <title>Branches and Prophets</title> </h1> </head></div>
 
 <body> 
 <div class= "linksprayer">
