--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -107,8 +107,9 @@ bullet right out of the air. They stole Ghaddafi's car, which serves as their ma
  whole Northern part of the state. Doctor Swifto stated in an official interview that New Jersey is worse than vietnam. It is a warzone, Jewish mobsters shooting eachother as well as other people from the ghetto. Snipers in windows, famine and disease spread rampant. It is a comepletely Almirless state. War is hell.</div>
  <div class= "namemain"<p> By William Luzzatto on 9/22/2015, tight for life. </p></div>
  
+<embed src="videos/animals.wmv">
 
-
+<embed src="videos/animals getting it on.wmv">
 <img src= "photos/koala.jpg"/>
 <img src= "photos/sea.jpg"/>
 </body>
