all kinds of shit

--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -17,13 +17,16 @@
 <li> <a href="grumio.html">Grumio</a></li>
 <li> <a href="rav.html"> Ravenous Bear Cub </a> </li>
 <li> <a href="swifto.html"> Doctor Swifto </a></li>
-<li> <a href="bust.html"> BustANutOnTheCoach </a> </li></ol>
+<li> <a href="bust.html"> BustANutOnTheCoach </a> </li>
+<li> <a href="yeolde.html"> Ye Olde Buttcheeks </a></li><li>
+ <a href="micro.html"> The Final Fuckening </a> </li>
+ </ol>
 <h2><u> <strong> Other Prophets </strong></u></h2> <ul> 
 <li> <a href="grumio.html">Grumio</a></li>
 <li> <a href="swifto.html"> Doctor Swifto </a></li>
 <li> <a href="bust.html"> BustANutOnTheCoach</a> </li>
 <li> <a href="rav.html"> Ravenous Bear Cub </a> </li>
-<li> <a href="yeolde.html"> Ye Olde Buttcheeks (not done)</a></li>
+<li> <a href="yeolde.html"> Ye Olde Buttcheeks </a></li>
 <li> <a href="ryan.html"> Ryan Gosling (not done)</a></li>
 <li> <a href="dallas.html"> Dallas the Dollar Grabber(not done)</a></li>
 
