--- a/bust.html
+++ b/bust.html
@@ -20,12 +20,10 @@
 <li> <a href="swifto.html"> Doctor Swifto </a></li>
 <li> <a href="rav.html"> Ravenous Bear Cub </a> </li>
 <li> <a href="bust.html"> BustANutOnTheCoach </a> </li>
+<li> <a href="yeolde.html"> Ye Olde Buttcheeks </a></li>
+<li> <a href="micro.html"> The Final Fuckening </a> </li>
 </ol></div>
 <div class="earlylife">
 <h2> <strong> <u>BustANutOnTheCoach</u></strong></h2> 
 <p> BustANutOnTheCoach is one of the original tightenites who followed Yung Lean. BustANutOnTheCoach is of the original tightest crew. A companion of Doctor Swifto. He travels the land with Ravenous Bear Cub and Doctor Swifto, speading their tightness. He goes by many names. Never Forgetti the Towels, CumStainedBlanket, SaltyNegroes, and BustANutOnTheCoach. He founded the tightest crew with Doctor Swifto and is widely considered to be the founder of Tightness. Doctor Swifto and BustANutOnTheCoach have fought many battles side by side. Robbing banks and fighting the army in just suits. They are the definition of tightest crew. BustANutOnTheCoach and Doctor Swifto make not only the tightest crew, they make the TIGHTEST CREW EVAR.
-Almir smiles upon them. BustANutOnTheCoach and Stinging Gonnorea are great friends, but unfortunately Stinging Gonnorea has a problem maintaining tightness. As he has not done anything tight since April 2015. Stinging isn't even infamy yet. </p> BustANutOnTheCoach is a master of stealth, and a great mastermind. Doctor Swifto is OK at stealth, but he is an AMAZING mastermind. Together, and with Ye Olde, Yung Lean, Ravenous, Or Stinging Gonnorea as well, can do any hiest. Loud or stealth, hard or easy. Together they form the tightest unity ever. BustANutOnTheCoach is one of Doctor Swifto's <u> Main nigs </u> .<strong> Tight for lyfe fam. Be tight or  die tryin. </strong> </p>
-</div>
-
-</body>
-</html>
+Almir smiles upon them. BustANutOnTheCoach and Stinging Gonnorea are great friends, but unfortunately Stinging Gonnorea has a problem maintaining tightness. As he has not done anything tight since April 2015. Stinging isn't even infamy yet. </p> BustANutOnTheCoach is a master of stealth, and a great mastermind. Doctor Swifto is OK at stealth, but he is an AMAZING mastermind. Together, and with Ye Olde, Yung Lean, Ravenous, Or Stinging Gonnorea as well, can do any hiest. Loud or stealth, hard or easy. Together they form the tightest unity ever. BustANutOnTheCoach is one of Doctor Swifto's <u> Main nigs </u> .<strong> Tight for lyfe fam. Be tight or  die tryin. </strong> 
