--- a/godd.html
+++ b/godd.html
@@ -20,6 +20,8 @@
 <li><a href="swifto.html"> Doctor Swifto </a></li>
 <li> <a href="rav.html"> Ravenous Bear Cub </a> </li>
 <li> <a href="bust.html"> BustANutOnTheCoach </a> </li>
+<li> <a href="yeolde.html"> Ye Olde Buttcheeks </a></li>
+<li> <a href="micro.html"> The Final Fuckening </a> </li>
 </ol></div>
 <div class="godd"> Godd Howard was a poor sheperd in Bethesda, Maryland USA. He was inpregnated with Almir's child, "Yung Lean". Almir told Godd Howard that he is 
 pregnant with a holy child, and that he would be the tightest human to ever live. Almir told Godd Howard that he is to raise this child and that 
