--- a/grumio.html
+++ b/grumio.html
@@ -20,6 +20,8 @@
 <li> <a href="swifto.html"> Doctor Swifto </a></li>
 <li> <a href="rav.html"> Ravenous Bear Cub </a> </li>
 <li> <a href="bust.html"> BustANutOnTheCoach </a> </li>
+<li> <a href="yeolde.html"> Ye Olde Buttcheeks </a></li>
+<li> <a href="micro.html"> The Final Fuckening </a> </li>
 </ol></div>
 <div class="earlylife">
 <h2> <strong> <u>Grumio</u></strong></h2> <p> Grumio is a pivotal character in Almirish Mythology. In 39 BY (before Yung, like BC. Grumio was born in 39 BC), Grumio was one of the Tightest humans alive. This is only 39 years 
