--- a/thesales.html
+++ b/thesales.html
@@ -19,6 +19,8 @@
 <li> <a href="swifto.html"> Doctor Swifto </a></li>
 <li> <a href="rav.html"> Ravenous Bear Cub </a> </li>
 <li> <a href="bust.html"> BustANutOnTheCoach </a> </li>
+<li> <a href="yeolde.html"> Ye Olde Buttcheeks </a></li>
+<li> <a href="micro.html"> The Final Fuckening </a> </li>
 </ol></div>
 <div class="thesales2"> <p><h3>Every season, Non-tight come together to worship during the sales. The Sales are 
 a seasonal holiday celebrating the seasonal sales given by Gaben. Much like<a href="crime.html"> Crimefest
