--- a/ye olde.html
+++ b/ye olde.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link href = "css/style.css" type = "text/css" rel = "stylesheet" />
-<div class= "borderbust"><h1><u> Ravenous Bear Cub</u> <title> Ravenous Bear Cub </title> </h1> </head></div>
+<div class= "borderbust"><h1><u> Ye Olde Buttcheeks </u> <title> Ye Olde Buttcheeks </title> </h1> </head></div>
 
 <body> 
 <div class= "linksprayer">
@@ -24,11 +24,14 @@
 <li> <a href="micro.html"> The Final Fuckening </a> </li>
 </ol></div>
 <div class="earlylife">
-<h2> <strong> <u>Ravenous Bear Cub</u></strong></h2> 
-<p> Ravenous Bear Cub is the tightest non-human alive, acompanying Doctor Swifto and BustANutOntheCoach on their travels. He is one of the original tightenites. He is a bear who speaks english for some reason. His name changes constantly. But he remains a bear cub. He will change from Ravenous Bear Cub, Festive Bear Cub, Tight Bear Cub, and such. He is very tight. Acompanying Doctor Swifto since almost the beginning of recorded history. He is one of the first tightenites that followed Yung Lean. He is a faithful companion of Doctor Swifto and has traveled across the land with him. Yung Lean, Doctor Swifto, BustANutOnTheCoach and Ravenous Bear Cub make a very tight crew. </p><p> Rav along with Doctor Swifto and one of the other tightest crew members, form the tightest crew evar. </p>
+<h2> <strong> <u> Ye Olde Buttcheeks</u></strong></h2> 
+<p> Ye Olde Buttcheeks is a real human bean and a real hero. Just like Ryan Gosling. He is the slayer of horse men as seen in
+ <a href= "https://www.youtube.com/watch?v=C8L8UAmceQ0"> [Cancer Intensifies]</a> And in the 5 episodes of the Real Human bean series.
+ He is a real human bean and a real hero. On film, on line, and in real life. He is the king of unsanitary explosive ordinance, which is one of his favorite television board games. He was the one who originally showed Doctor Swifto the way of the tight. He is the mentor of Doctor Swifto. Ye Olde is the one who introduced Doctor Swifto to Yung Lean's glory. 
+ 
+ </p>
 </div>
 
 </body>
 </html>
-
 
