--- a/Almir.html
+++ b/Almir.html
@@ -19,6 +19,8 @@
 <li> <a href="swifto.html"> Doctor Swifto </a></li>
 <li> <a href="rav.html"> Ravenous Bear Cub </a> </li>
 <li> <a href="bust.html"> BustANutOnTheCoach </a> </li>
+<li> <a href="yeolde.html"> Ye Olde Buttcheeks </a></li>
+<li> <a href="micro.html"> The Final Fuckening </a> </li>
 </ol></div>
 <div class ="almir2"><h2> <u> In the beginning</u> </h2></div>
 <div class ="almir3"><p> In the beginning there was nothing, but Almir Listo. All was dark, no light to be seen. On the first day, Almir created light, dark and DLC. The good was light, dark was bad, and DLC was everywhere.</p>
