--- a/gaben.html
+++ b/gaben.html
@@ -19,6 +19,8 @@
 <li> <a href="swifto.html"> Doctor Swifto </a></li>
 <li> <a href="rav.html"> Ravenous Bear Cub </a> </li>
 <li> <a href="bust.html"> BustANutOnTheCoach </a> </li>
+<li> <a href="yeolde.html"> Ye Olde Buttcheeks </a></li>
+<li> <a href="micro.html"> The Final Fuckening </a> </li>
 </ol></div>
 <div class="gaben2"><h3><p> Gabe Noodle is the founder of valve, he is the least tightest person on the planet. 
 A polar opposite to Almir. He is the reason that each season Sales occur. The Sales would be a good thing if he
