--- a/swifto.html
+++ b/swifto.html
@@ -20,6 +20,8 @@
 <li> <a href="swifto.html"> Doctor Swifto </a></li>
 <li> <a href="rav.html"> Ravenous Bear Cub </a> </li>
 <li> <a href="bust.html"> BustANutOnTheCoach </a> </li>
+<li> <a href="yeolde.html"> Ye Olde Buttcheeks </a></li>
+<li> <a href="micro.html"> The Final Fuckening </a> </li>
 </ol></div>
 <div class="earlylife">
 <h2> <strong> <u>Doctor Swifto</u></strong></h2> <p>
