--- a/1Tightest crew site.html
+++ b/1Tightest crew site.html
@@ -6,20 +6,20 @@
 <body>
 	<link href = "css/style.css" type = "text/css" rel = "stylesheet" />
 	<div class ="linksmain"><h2> <u> The Gospel of Tight </u> </h2>
-<ol> <li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
- <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
- <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DLC </a></li> 
-  <li><a href= "A prayer.html"> Prayer to Almir </a></li>
-<li><a href= "crime.html"> Crimefest; A holiday of Almir</a></li>  
-<li><a href= "gaben.html">Gabe Noodle and the Loosest Crew</a></li>
-<li> <a href= "thesales.html">The Sales; A holiday of Gaben</a></li>
-<li> <a href="prophets.html"> Prophets and Branches of Tightism </a> </li> 
-<li> <a href="grumio.html">Grumio</a></li>
-<li> <a href="rav.html"> Ravenous Bear Cub </a> </li>
-<li> <a href="swifto.html"> Doctor Swifto </a></li>
-<li> <a href="bust.html"> BustANutOnTheCoach </a> </li>
-<li> <a href="ye olde.html"> Ye Olde Buttcheeks </a></li><li>
- <a href="micro.html"> The Final Fuckening </a> </li>
+<ol> <li>  <a href= "2Almir.html"> Almir and the Creation of the Universe </a> </li>
+ <li> <a href= "3godd.html"> Godd Howard and the Holy Child </a></li>
+ <li><a href= "4yung lean.html"> Yung Lean and the story of Almir's DLC </a></li> 
+  <li><a href= "5A prayer.html"> Prayer to Almir </a></li>
+<li><a href= "6crime.html"> Crimefest; A holiday of Almir</a></li>  
+<li><a href= "7gaben.html">Gabe Noodle and the Loosest Crew</a></li>
+<li> <a href= "8thesales.html">The Sales; A holiday of Gaben</a></li>
+<li> <a href="9prophets.html"> Prophets and Branches of Tightism </a> </li> 
+<li> <a href="10grumio.html">Grumio</a></li>
+<li> <a href="11rav.html"> Ravenous Bear Cub </a> </li>
+<li> <a href="12swifto.html"> Doctor Swifto </a></li>
+<li> <a href="13bust.html"> BustANutOnTheCoach </a> </li>
+<li> <a href="14yeolde.html"> Ye Olde Buttcheeks </a></li>
+<li><a href="15final.html"> The Final Fuckening </a> </li>
  </ol>
 <h2><u> <strong> Other Prophets </strong></u></h2> <ul> 
 <li> <a href="grumio.html">Grumio</a></li>
@@ -109,10 +109,6 @@ bullet right out of the air. They stole Ghaddafi's car, which serves as their ma
  Gabe Newell and the jews that live there. There is only poverty and despair in Northern New Jersey. It's like the worst parts of NYC just its the
  whole Northern part of the state. Doctor Swifto stated in an official interview that New Jersey is worse than vietnam. It is a warzone, Jewish mobsters shooting eachother as well as other people from the ghetto. Snipers in windows, famine and disease spread rampant. It is a comepletely Almirless state. War is hell.</div>
  <div class= "namemain"<p> By William Luzzatto on 9/22/2015, tight for life. </p></div>
- 
-<embed src="videos/animals.wmv">
-
-<embed src="videos/animals getting it on.wmv">
 <img src= "photos/koala.jpg"/>
 <img src= "photos/sea.jpg"/>
 </body>
