--- a/4yung lean.html
+++ b/4yung lean.html
@@ -5,26 +5,22 @@
 <div class="thestory"><h1><u> The Story of Yung Lean </u> <title> The Story of Yung Lean </title> </h1> </head></div>
 <body> 
  <div class ="linksmain"><h2> <u> The Gospel of Tight </u> </h2>
-<a href= "Tightest crew site.html"> Home </a> 
-
-<ol> 
-
-<li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
- <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
-  <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DLC </a></li> 
-  <li><a href= "A prayer.html"> Prayer to Almir </a></li>
-  <li><a href="crime.html"> Crimefest; A holiday of Almir</a></li>
-  <li><a href="gaben.html">Gabe Noodle and the Loosest Crew</a></li>
-<li> <a href="thesales.html">The Sales; A holiday of Gaben</a></li>
-<li> <a href="prophets.html"> Prophets and Branches of Tightism </a> </li> 
-<li> <a href="grumio.html">Grumio</a></li>
-<li> <a href="swifto.html"> Doctor Swifto </a></li>
-<li> <a href="rav.html"> Ravenous Bear Cub </a> </li>
-<li> <a href="bust.html"> BustANutOnTheCoach </a> </li>
-<li> <a href="ye olde.html"> Ye Olde Buttcheeks </a></li>
-<li> <a href="micro.html"> The Final Fuckening </a> </li>
-</ol></div>
-
+ <a href= "1Tightest crew site.html"> Home </a> <ol>
+<li>  <a href= "2Almir.html"> Almir and the Creation of the Universe </a> </li>
+ <li> <a href= "3godd.html"> Godd Howard and the Holy Child </a></li>
+ <li><a href= "4yung lean.html"> Yung Lean and the story of Almir's DLC </a></li> 
+  <li><a href= "5A prayer.html"> Prayer to Almir </a></li>
+<li><a href= "6crime.html"> Crimefest; A holiday of Almir</a></li>  
+<li><a href= "7gaben.html">Gabe Noodle and the Loosest Crew</a></li>
+<li> <a href= "8thesales.html">The Sales; A holiday of Gaben</a></li>
+<li> <a href="9prophets.html"> Prophets and Branches of Tightism </a> </li> 
+<li> <a href="10grumio.html">Grumio</a></li>
+<li> <a href="11rav.html"> Ravenous Bear Cub </a> </li>
+<li> <a href="12swifto.html"> Doctor Swifto </a></li>
+<li> <a href="13bust.html"> BustANutOnTheCoach </a> </li>
+<li> <a href="14ye olde.html"> Ye Olde Buttcheeks </a></li>
+<li><a href="15final.html"> The Final Fuckening </a> </li>
+</ol>
 
 <div class="earlylife"><h2> <u> Early life </u> </h2>
 <p> Yung lean is a sort of demigod. Born half human, half DLC. Yung lean is the son of Almir Listo. He was born to a virgin mother, much like jesus.
