--- a/2Almir.html
+++ b/2Almir.html
@@ -7,7 +7,7 @@
 <div class ="linkalmir"> 
 <h2> <u> The Gospel of Tight </u> </h2>
 <a href= "Tightest crew site.html"> Home 
-<ol> <li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
+<ol> <li>  <a href= "2Almir.html"> Almir and the Creation of the Universe </a> </li>
  <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
  <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DLC </a></li> 
   <li><a href= "A prayer.html"> Prayer to Almir </a></li>
