--- a/3godd.html
+++ b/3godd.html
@@ -8,21 +8,21 @@
 
 <ol> 
 
-<li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
- <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
- <li> <a href= "yung lean.html"> Yung Lean and the story of Almir's DLC</a></li>
-  <li><a href= "A prayer.html"> Prayer to Almir </a></li>
-  <li><a href="crime.html"> Crimefest; A holiday of Almir</a></li>
-  <li><a href="gaben.html">Gabe Noodle and the Loosest Crew</a></li>
-<li> <a href="thesales.html">The Sales; A holiday of Gaben</a></li>
-<li> <a href="prophets.html"> Prophets and Branches of Tightism </a> </li> 
-<li> <a href="grumio.html">Grumio</a></li>
-<li><a href="swifto.html"> Doctor Swifto </a></li>
-<li> <a href="rav.html"> Ravenous Bear Cub </a> </li>
-<li> <a href="bust.html"> BustANutOnTheCoach </a> </li>
-<li> <a href="ye olde.html"> Ye Olde Buttcheeks </a></li>
-<li> <a href="micro.html"> The Final Fuckening </a> </li>
-</ol></div>
+<li>  <a href= "2Almir.html"> Almir and the Creation of the Universe </a> </li>
+ <li> <a href= "3godd.html"> Godd Howard and the Holy Child </a></li>
+ <li><a href= "4yung lean.html"> Yung Lean and the story of Almir's DLC </a></li> 
+  <li><a href= "5A prayer.html"> Prayer to Almir </a></li>
+<li><a href= "6crime.html"> Crimefest; A holiday of Almir</a></li>  
+<li><a href= "7gaben.html">Gabe Noodle and the Loosest Crew</a></li>
+<li> <a href= "8thesales.html">The Sales; A holiday of Gaben</a></li>
+<li> <a href="9prophets.html"> Prophets and Branches of Tightism </a> </li> 
+<li> <a href="10grumio.html">Grumio</a></li>
+<li> <a href="11rav.html"> Ravenous Bear Cub </a> </li>
+<li> <a href="12swifto.html"> Doctor Swifto </a></li>
+<li> <a href="13bust.html"> BustANutOnTheCoach </a> </li>
+<li> <a href="14ye olde.html"> Ye Olde Buttcheeks </a></li>
+<li><a href="15final.html"> The Final Fuckening </a> </li>
+</ol>></div>
 <div class="godd"> Godd Howard was a poor sheperd in Bethesda, Maryland USA. He was inpregnated with Almir's child, "Yung Lean". Almir told Godd Howard that he is 
 pregnant with a holy child, and that he would be the tightest human to ever live. Almir told Godd Howard that he is to raise this child and that 
 Almir ain't payin' no child support. Despite never paying child support to his baby daddy/momma, Almir watched over the child and father.</p>
