--- a/8thesales.html
+++ b/8thesales.html
@@ -6,7 +6,7 @@
 <div class ="linksmain">
 
 <h2> <u> The Gospel of Tight </u> </h2>
-<a href= "Tightest crew site.html"> Home </a> 
+<a href= "1Tightest crew site.html"> Home </a> 
 <ol> <li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
  <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
  <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DLC </a></li> 
