--- a/1Tightest crew site.html
+++ b/1Tightest crew site.html
@@ -22,11 +22,11 @@
 <li><a href="15final.html"> The Final Fuckening </a> </li>
  </ol>
 <h2><u> <strong> Other Prophets </strong></u></h2> <ul> 
-<li> <a href="grumio.html">Grumio</a></li>
-<li> <a href="swifto.html"> Doctor Swifto </a></li>
-<li> <a href="bust.html"> BustANutOnTheCoach</a> </li>
-<li> <a href="rav.html"> Ravenous Bear Cub </a> </li>
-<li> <a href="yeolde.html"> Ye Olde Buttcheeks </a></li>
+<li> <a href="10grumio.html">Grumio</a></li>
+<li> <a href="12swifto.html"> Doctor Swifto </a></li>
+<li> <a href="13bust.html"> BustANutOnTheCoach</a> </li>
+<li> <a href="11rav.html"> Ravenous Bear Cub </a> </li>
+<li> <a href="14yeolde.html"> Ye Olde Buttcheeks </a></li>
 <li> <a href="ryan.html"> Ryan Gosling (not done)</a></li>
 <li> <a href="dallas.html"> Dallas the Dollar Grabber(not done)</a></li>
 
