--- a/9prophets.html
+++ b/9prophets.html
@@ -30,14 +30,12 @@
 <h2> <u> Worshiped Prophets </u> </h2>
 <ul> <li><a href="grumio.html"> Grumio </a></li>
 
-<li> <a href="swifto.html"> Doctor Swifto </a></li>
-<li> <a href="rav.html"> Ravenous Bear Cub </a> </li>
-<li> <a href="Bust.html"> BustANutOnTheCoach </a> </li>
-<li> <a href="yeolde.html"> Ye Olde Buttcheeks (not done)</a></li>
+<li> <a href="12swifto.html"> Doctor Swifto </a></li>
+<li> <a href="11rav.html"> Ravenous Bear Cub </a> </li>
+<li> <a href="13Bust.html"> BustANutOnTheCoach </a> </li>
+<li> <a href="14yeolde.html"> Ye Olde Buttcheeks </a></li>
 <li> <a href="dallas.html"> Dallas the Dollar Grabber(not done)</a></li>
-<li> <a href="barack.html"> Barack Obama (not done)</a></li>
-<li> <a href="damon.html"> Matt Damon (not done)</a> </li>
-<li> <a href="godd.html"> Godd Howard </a> </li>
+<li> <a href="3godd.html"> Godd Howard </a> </li>
 <li> <a href="ryan.html"> Ryan Gosling (not done)</a></li>
 </ul>
 </div>
