alot of changes

--- a/12swifto.html
+++ b/12swifto.html
@@ -5,9 +5,9 @@
 <div class= "borderbust"><h1><u>Doctor Swifto</u> <title>Doctor Swifto</title> </h1> </head></div>
 
 <body> 
-<div class= "linksprayer">
+<div class= "linksprayer"> <a href= "Tightest crew site.html"> Home </a> 
 <h2> <u> The Gospel of Tight </u> </h2>
- <a href= "1Tightest crew site.html"> Home </a> 
+
  <ol> <li>  <a href= "2Almir.html"> Almir and the Creation of the Universe </a> </li>
  <li> <a href= "3godd.html"> Godd Howard and the Holy Child </a></li>
  <li><a href= "4yung lean.html"> Yung Lean and the story of Almir's DLC </a></li> 
