--- a/13bust.html
+++ b/13bust.html
@@ -6,8 +6,9 @@
 
 <body> 
 <div class= "linksprayer">
+ <a href= "Tightest crew site.html"> Home </a> 
 <h2> <u> The Gospel of Tight </u> </h2>
- <a href= "1Tightest crew site.html"> Home </a> 
+
 
 <ol> 
 
