--- a/3godd.html
+++ b/3godd.html
@@ -3,9 +3,9 @@
 <head> <div class="titlegodd"><title> The Story of Godd Howard </title> <h2> <u>The Story of Godd Howard </u> </h2> </head></div>
 <body>
 <link href = "css/style.css" type = "text/css" rel = "stylesheet" />
- <div class ="linksmain"><h2> <u> The Gospel of Tight </u> </h2>
+ <div class ="linksmain"><h2> 
 <a href= "Tightest crew site.html"> Home </a> 
-
+<u> The Gospel of Tight </u> </h2>
 <ol> 
 
 <li>  <a href= "2Almir.html"> Almir and the Creation of the Universe </a> </li>
