--- a/4yung lean.html
+++ b/4yung lean.html
@@ -4,8 +4,10 @@
 <link href = "css/style.css" type = "text/css" rel = "stylesheet" />
 <div class="thestory"><h1><u> The Story of Yung Lean </u> <title> The Story of Yung Lean </title> </h1> </head></div>
 <body> 
- <div class ="linksmain"><h2> <u> The Gospel of Tight </u> </h2>
- <a href= "1Tightest crew site.html"> Home </a> <ol>
+ <div class ="linksmain">
+ <a href= "Tightest crew site.html"> Home </a>
+ <h2> <u> The Gospel of Tight </u> </h2>
+  <ol>
 <li>  <a href= "2Almir.html"> Almir and the Creation of the Universe </a> </li>
  <li> <a href= "3godd.html"> Godd Howard and the Holy Child </a></li>
  <li><a href= "4yung lean.html"> Yung Lean and the story of Almir's DLC </a></li> 
