--- a/5A prayer.html
+++ b/5A prayer.html
@@ -6,8 +6,9 @@
 
 <body> 
 <div class= "linksprayer">
+ <a href= "Tightest crew site.html"> Home </a> 
 <h2> <u> The Gospel of Tight </u> </h2>
- <a href= "1Tightest crew site.html"> Home </a> <ol>
+<ol>
 <li>  <a href= "2Almir.html"> Almir and the Creation of the Universe </a> </li>
  <li> <a href= "3godd.html"> Godd Howard and the Holy Child </a></li>
  <li><a href= "4yung lean.html"> Yung Lean and the story of Almir's DLC </a></li> 
