--- a/6crime.html
+++ b/6crime.html
@@ -5,7 +5,7 @@
 <body> 
 <div class= "linkscrimefest">
 <h2> <u> The Gospel of Tight </u> </h2>
- <a href= "1Tightest crew site.html"> Home </a> 
+ <a href= "Tightest crew site.html"> Home </a> 
 
 <ol> 
 
