--- a/7gaben.html
+++ b/7gaben.html
@@ -5,8 +5,10 @@
 <body> 
 <link href = "css/style.css" type = "text/css" rel = "stylesheet" />
 
-	<div class ="linksmain"><h2> <u> The Gospel of Tight </u> </h2>
-	 <a href= "1Tightest crew site.html"> Home </a> <ol>
+	<div class ="linksmain">
+	<a href= "Tightest crew site.html"> Home </a>
+<h2> <u> The Gospel of Tight </u> </h2>
+	  <ol>
 	 <li>  <a href= "2Almir.html"> Almir and the Creation of the Universe </a> </li>
  <li> <a href= "3godd.html"> Godd Howard and the Holy Child </a></li>
  <li><a href= "4yung lean.html"> Yung Lean and the story of Almir's DLC </a></li> 
