--- a/4yung lean.html
+++ b/4yung lean.html
@@ -22,7 +22,7 @@
 <li> <a href="13bust.html"> BustANutOnTheCoach </a> </li>
 <li> <a href="14ye olde.html"> Ye Olde Buttcheeks </a></li>
 <li><a href="15final.html"> The Final Fuckening </a> </li>
-</ol>
+</ol></div>
 
 <div class="earlylife"><h2> <u> Early life </u> </h2>
 <p> Yung lean is a sort of demigod. Born half human, half DLC. Yung lean is the son of Almir Listo. He was born to a virgin mother, much like jesus.
