--- a/14ye olde.html
+++ b/14ye olde.html
@@ -28,7 +28,7 @@
 <h2> <strong> <u> Ye Olde Buttcheeks</u></strong></h2> 
 <p> Ye Olde Buttcheeks is a real human bean and a real hero. Just like Ryan Gosling. He is the slayer of horse men as seen in
  <a href= "https://www.youtube.com/watch?v=C8L8UAmceQ0"> [Cancer Intensifies]</a> And in the 5 episodes of the Real Human bean series.
- He is a real human bean and a real hero. On film, on line, and in real life. He is the king of unsanitary explosive ordinance, which is one of his favorite television board games. He was the one who originally showed Doctor Swifto the way of the tight. He is the mentor of Doctor Swifto. Ye Olde is the one who introduced Doctor Swifto to Yung Lean's glory. 
+ He is a real human bean and a real hero. On film, on line, and in real life. He is the king of unsanitary explosive ordinance, which is one of his favorite television board games. He was the one who originally showed Doctor Swifto the way of the tight. He is the mentor of Doctor Swifto. Ye Olde is the one who introduced Doctor Swifto to Yung Lean's glory. He was the original organizer of the Tightest Crew. He is a mentor to Doctor Swifto, making Doctor Swifto the tightest crew member that he is today. He is a Real Human Bean and a real hero.
  
  </p>
 </div>
