--- a/15final.html
+++ b/15final.html
@@ -24,7 +24,7 @@
 <li> <a href="13bust.html"> BustANutOnTheCoach </a> </li>
 <li> <a href="14ye olde.html"> Ye Olde Buttcheeks </a></li>
 <li><a href="15final.html"> The Final Fuckening </a> </li>
-</ol>></div>
+</ol></div>
 <div class="godd"><p><strong> The Final Fuckening </stong> occured during crimefest 2015. Almir condemmed the Payday 2 community to their doom by the way of Microtransactions. He succumbed to the temptations of Gaben. Gaben had done this to many games before. Team Fortress 2 and Counter Strike: Global Offensive. As well as Rust, Unturned, and Dota 2. Almir saw the money they made without actually doing anything at all. They could make boatloads of cash without actually doing any work. He knew the impact this would make on the community, they would all hate it but clamor to buy them. </p>
 <p> He used the community for their money. He knew he could make butloads of money without actually trying. He didn't have to add any actual content. No maps, no new weapons, no hiests, just stupid paint jobs. Yet this guarenteed Almir money without adding anything. The community would continue to spend and spend on the items. Their prices getting lesser and lesser each time. Until eventually they were worthless. And if they just let the community vote for the new skins, they would keep making them, without even having to make the new skins. Community members would keep making new skins. </p>
 <img src="photos/devil.jpg">
