--- a/14ye olde.html
+++ b/14ye olde.html
@@ -34,6 +34,7 @@
 <p> He introduced Doctor Swifto to Yung Lean. As Ye Olde and Yung Lean have been friends for centuries. They are originally the tightest crew. They had been going away from the tight (light). But then the <a href="15final.html">Final Fuckening</a> began. Since the Final Fuckening began, Yung Lean's tightest Crew has reunited to bring tightness to Payday 2. This is Doctor Swifto, Yung Lean, Grumio the African Warlord, and Ye Olde Buttcheeks. Fighting Almir's evil army of microtransactions. And killing the skins. They are truly tight knights. Sacraficing themselves to restore tightness to the land of Payday 2. Since Crimefest 2015, things have never been the same. The Tightness of Payday 2 is draining with the sales of cheap gun skins. The only way to save it now is to add 100 dlcs and 1000 free hiests. That's the only way. Real human bean and a real hero.
  
  </p>
+ <img src ="photos/ye olde.jpg">
 </div>
 
 </body>
