--- a/14ye olde.html
+++ b/14ye olde.html
@@ -35,6 +35,7 @@
  
  </p>
  <img src ="photos/ye olde.jpg">
+ <p> Ye Olde showed Doctor Swifto to Payday 2, and without him showing Doctor Swifto, this mistake of nature of a website would not exist. ayy lmao </p>
 </div>
 
 </body>
