--- a/12swifto.html
+++ b/12swifto.html
@@ -26,6 +26,7 @@
 <div class="earlylife">
 <h2> <strong> <u>Doctor Swifto</u></strong></h2> <p>
  Doctor Swifto is a man of Mythical tightness. One of the 3 tight men who brought baby Yung Lean gifts, Doctor Swifto taught Yung Lean the ways of the tight. Training Yung Lean to use his natural tightness to become a man of legendary tightness. He founded the tight Monestary in which modern tightmasters train today. He still lives on Today, traveling the world and teaching the world to be tight. He fought alongside Grumio, and is actually the author of the Gospel of Tight. Doctor Swifto is one of the tightest men still alive. </p><p> During his military campaign with Grumio, they both multiplied  their own tightness by 1000. Becoming tighter than ever before. He built the Tight Monestary and founded the religion of Tightness. He is basically the pope/caliphate of Tightness. He leads the tightest crew into battle on a daily basis, saving the world from untightness every hour of every day. He sacrafices his time to stop tightness. He is a REAL HUMAN BEAN, AND A REAL HERO. THERE'S SOMETHING INSIDE YOU BOY, ITS HARD TO EXPLAIN. ITS SOMETHING ABOUT YOU BOY, BUT YOU'RE STILL THE SAME. THERES SOMETHING ABOUT YOU BOY, BUT YOU'RE STILL THE SAME. I WANNA DRIVE YOU DOWN THE HILLS BLAH BLAH BLAH. </p>
- <img src="photos/will.jpg"> <img src="photos/grumio.jpg"> </div>
+ <img src="photos/swifto.jpg">
+ <img src="photos/grumio.jpg"> </div>
  </body>
  </html>
