change change never wars...

--- a/15final.html
+++ b/15final.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head><link href = "css/style.css" type = "text/css" rel = "stylesheet" />
-<div class ="gaben"><h1><u>The Final Fuckening</u> <title>The Final Fuckening</title> </h1> </head></div>
+<div class ="final"><h2><u>The Final Fuckening</u> <title>The Final Fuckening</title> </h2> </head></div>
 <body> 
 <link href = "css/style.css" type = "text/css" rel = "stylesheet" />
 
@@ -25,7 +25,7 @@
 <li> <a href="14ye olde.html"> Ye Olde Buttcheeks </a></li>
 <li><a href="15final.html"> The Final Fuckening </a> </li>
 </ol></div>
-<div class="godd"><p><strong> The Final Fuckening </stong> occured during crimefest 2015. Almir condemmed the Payday 2 community to their doom by the way of Microtransactions. He succumbed to the temptations of Gaben. Gaben had done this to many games before. Team Fortress 2 and Counter Strike: Global Offensive. As well as Rust, Unturned, and Dota 2. Almir saw the money they made without actually doing anything at all. They could make boatloads of cash without actually doing any work. He knew the impact this would make on the community, they would all hate it but clamor to buy them. </p>
+<div class="final2"><p><strong> The Final Fuckening </stong> occured during crimefest 2015. Almir condemmed the Payday 2 community to their doom by the way of Microtransactions. He succumbed to the temptations of Gaben. Gaben had done this to many games before. Team Fortress 2 and Counter Strike: Global Offensive. As well as Rust, Unturned, and Dota 2. Almir saw the money they made without actually doing anything at all. They could make boatloads of cash without actually doing any work. He knew the impact this would make on the community, they would all hate it but clamor to buy them. </p>
 <p> He used the community for their money. He knew he could make butloads of money without actually trying. He didn't have to add any actual content. No maps, no new weapons, no hiests, just stupid paint jobs. Yet this guarenteed Almir money without adding anything. The community would continue to spend and spend on the items. Their prices getting lesser and lesser each time. Until eventually they were worthless. And if they just let the community vote for the new skins, they would keep making them, without even having to make the new skins. Community members would keep making new skins. </p>
 <p>Since Crimefest 2015, things have never been the same. The Tightness of Payday 2 is draining with the sales of cheap gun skins. The only way to save it now is to add 1000 free hiests. That's the only way. If Almir does this, it will restore his place as a real human bean and a real hero. REALLLLLLLLLL HUMAN BEAN.......... AND A REAL HERO.
  </p>
