--- a/8thesales.html
+++ b/8thesales.html
@@ -20,7 +20,8 @@
 <li> <a href="12swifto.html"> Doctor Swifto </a></li>
 <li> <a href="13bust.html"> BustANutOnTheCoach </a> </li>
 <li> <a href="14ye olde.html"> Ye Olde Buttcheeks </a></li>
-<li><a href="15final.html"> The Final Fuckening </a> </li>
+<li><a href="15ryan.html"> Ryan Gosling </a> </li>
+<li><a href="final.html"> The Final Fuckening </a> </li>
 </ol></div>
 <div class="thesales2"> <p><h3>Every season, Non-tight come together to worship during the sales. The Sales are 
 a seasonal holiday celebrating the seasonal sales given by Gaben. Much like<a href="crime.html"> Crimefest
