--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -19,7 +19,8 @@
 <li> <a href="12swifto.html"> Doctor Swifto </a></li>
 <li> <a href="13bust.html"> BustANutOnTheCoach </a> </li>
 <li> <a href="14ye olde.html"> Ye Olde Buttcheeks </a></li>
-<li><a href="15final.html"> The Final Fuckening </a> </li>
+<li><a href="15ryan.html"> Ryan Gosling </a> </li>
+<li><a href="final.html"> The Final Fuckening </a> </li>
  </ol>
 <h2><u> <strong> Other Prophets </strong></u></h2> <ul> 
 <li> <a href="10grumio.html">Grumio</a></li>
@@ -27,7 +28,7 @@
 <li> <a href="13bust.html"> BustANutOnTheCoach</a> </li>
 <li> <a href="11rav.html"> Ravenous Bear Cub </a> </li>
 <li> <a href="14ye olde.html"> Ye Olde Buttcheeks </a></li>
-<li> <a href="ryan.html"> Ryan Gosling (not done)</a></li>
+<li> <a href="15ryan.html"> Ryan Gosling (not done)</a></li>
 <li> <a href="dallas.html"> Dallas the Dollar Grabber(not done)</a></li>
 
 
