--- a/2Almir.html
+++ b/2Almir.html
@@ -21,7 +21,8 @@
 <li> <a href="12swifto.html"> Doctor Swifto </a></li>
 <li> <a href="13bust.html"> BustANutOnTheCoach </a> </li>
 <li> <a href="14ye olde.html"> Ye Olde Buttcheeks </a></li>
-<li><a href="15final.html"> The Final Fuckening </a> </li>
+<li><a href="15ryan.html"> Ryan Gosling </a> </li>
+<li><a href="final.html"> The Final Fuckening </a> </li>
 </ol></div>
 <div class ="almir2"><h2> <u> In the beginning</u> </h2></div>
 <div class ="almir3"><p> In the beginning there was nothing, but Almir Listo. All was dark, no light to be seen. On the first day, Almir created light, dark and DLC. The good was light, dark was bad, and DLC was everywhere.</p>
